#1456 - Alabe - Fix Text on child record (text was clipped)

--- a/public/stylesheets/new_core.css
+++ b/public/stylesheets/new_core.css
@@ -272,7 +272,7 @@ a.mark_as_duplicate {
   .dropdown .mark-as-form {
     padding: 10px; }
 
-.display_basic {
+.children_info {
   width: 70%; }
 
 body {
